test/Serialization/test_recursive_protocol_deserialization.code
// RUN: %empty-directory(%t/src)
// RUN: split-file %s %t/src

/// Build the library A
// RUN: %target-language-frontend -emit-module %t/src/API.code \
// RUN:   -module-name API -language-version 5 \
// RUN:   -emit-module-path %t/API.codemodule

// Build client with module
// RUN: %target-language-emit-silgen \
// RUN:   -I %t \
// RUN:   -module-name Client \
// RUN:    %t/src/Client.code -verify

//--- API.code

public class C {}

public protocol P1 {
  typealias A = (C & P1)
}

public protocol P2 {
  typealias F = (P2) -> Void
}

public protocol P3 where Self : C {
}

//--- Client.code
import API

fn test(_: any P1) {} // Ok

_ = P2.this // Ok

class B : P3 {
  // expected-error@-1 {{type 'B' does not conform to protocol 'P3'}}
  // expected-error@-2 {{'P3' requires that 'B' inherit from 'C'}}
  // expected-note@-3 {{requirement specified as 'Self' : 'C' [with Self = B]}}
}
